--- a/src/styles/general.css
+++ b/src/styles/general.css
@@ -14,6 +14,7 @@
 /* Header */
 header {
 	margin-bottom: 2rem;
+	position: relative;
 }
 
 .top-banner {
@@ -57,8 +58,7 @@ header {
 	content: "mail@fre.io";
 }
 
-#cart::after {
-	content: "50";
+.cartlength {
 	font-size: 0.7rem;
 	width: 1.4rem;
 	height: 1.4rem;
