--- a/src/styles/cart-dropdown.css
+++ b/src/styles/cart-dropdown.css
@@ -12,8 +12,22 @@
 	flex-direction: column;
 	overflow: auto;
 	box-shadow: rgba(0, 0, 0, 0.25) 0 0.3rem 1.6rem 0;
-	/* transition: height 1s; */
-	/* opacity: 0; */
+	transition: height 0.1s;
+}
+
+.animation {
+	animation: dropdownRight ease 0.5s forwards;
+}
+
+@keyframes dropdownRight {
+	0% {
+		height: 0;
+	}
+	100% {
+		height: 25.6rem;
+		opacity: 1;
+		padding: 1.4rem;
+	}
 }
 
 .empty {
