--- a/src/styles/checkout.css
+++ b/src/styles/checkout.css
@@ -58,6 +58,7 @@ h4 {
 }
 
 .checkout-input,
+.hekl,
 .checkout-selector {
 	background-color: rgb(250, 250, 250);
 	border: 1px solid rgb(221, 221, 221);
@@ -204,4 +205,13 @@ input[type="checkbox"] {
 .place-order {
 	width: 100%;
 	margin-bottom: 1.5rem;
+}
+
+.checkout-form {
+	margin: 0;
+	width: 100%;
+}
+
+.submit {
+	height: 2.5rem;
 }
