--- a/src/styles/checkout.css
+++ b/src/styles/checkout.css
@@ -58,7 +58,6 @@ h4 {
 }
 
 .checkout-input,
-.hekl,
 .checkout-selector {
 	background-color: rgb(250, 250, 250);
 	border: 1px solid rgb(221, 221, 221);
@@ -225,4 +224,40 @@ input[type="checkbox"] {
 
 .error-input {
 	border: 1px solid red;
+}
+
+.details {
+	font-size: 0.9rem;
+	margin-bottom: 0.5rem;
+}
+
+.submitted {
+	position: fixed;
+	background-color: black;
+	color: white;
+	font-size: 2rem;
+	padding: 1rem 2rem;
+	top: 1rem;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	text-align: center;
+	left: 40%;
+	right: 40%;
+	z-index: 99;
+	opacity: 0;
+	border-radius: 0.2rem;
+}
+
+.submitted-animation {
+	animation: popup 0.1s forwards linear;
+}
+
+@keyframes popup {
+	0% {
+		top: -2rem;
+	}
+	100% {
+		top: 1rem;
+	}
 }
