--- a/src/styles/checkout.css
+++ b/src/styles/checkout.css
@@ -241,7 +241,8 @@ input[type="checkbox"] {
 	position: fixed;
 	background-color: black;
 	color: white;
-	font-size: 2rem;
+	font-size: 1.5rem;
+	font-weight: 700;
 	padding: 1rem 2rem;
 	top: 1rem;
 	display: flex;
@@ -265,5 +266,90 @@ input[type="checkbox"] {
 	}
 	100% {
 		top: 1rem;
+	}
+}
+
+.content {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	z-index: 99;
+	position: fixed;
+	top: 0;
+	left: 0;
+	right: 0;
+	bottom: 0;
+	background: rgb(33, 33, 39);
+}
+.big {
+	background-color: white;
+	width: 100px;
+	height: 100px;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	z-index: 99;
+	animation: scaleBig 1s linear alternate infinite;
+}
+.circle {
+	background-color: rgb(33, 33, 39);
+	border-radius: 100%;
+	height: 40px;
+	width: 40px;
+	animation: scale 1s linear alternate infinite;
+}
+.absolute {
+	position: absolute;
+	width: 50px;
+	height: 50px;
+}
+.top-left {
+	left: 550px;
+	top: 225px;
+	animation: rotate 0.5s linear infinite;
+}
+@keyframes rotate {
+	0% {
+		transform: rotate(0deg);
+	}
+	100% {
+		transform: rotate(90deg);
+	}
+}
+.top-right {
+	animation: rotate 0.5s linear reverse infinite;
+	right: 550px;
+	top: 225px;
+}
+.bottom-left {
+	bottom: 225px;
+	left: 550px;
+	animation: rotate 0.5s linear reverse infinite;
+}
+.bottom-right {
+	bottom: 225px;
+	animation: rotate 0.5s linear infinite;
+	right: 550px;
+}
+.absolute-circle {
+	height: 20px;
+	width: 20px;
+	/* z-index: -2; */
+	animation: scale 0.5s linear alternate infinite;
+}
+@keyframes scale {
+	0% {
+		transform: scale(0);
+	}
+	100% {
+		transform: scale(2);
+	}
+}
+@keyframes scaleBig {
+	0% {
+		transform: scale(0);
+	}
+	100% {
+		transform: scale(1);
 	}
 }
